New logo chanfg

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
 
     <!-- WEBSITE TITLE & DESCRIPTION -->
-    <title>Strider - A Game Studio Template</title>
-    <meta name="description" content="The best template for game developers and small studios">
+    <title>GG - Indie Game dev studio</title>
+    <meta name="description" content="First AAA studio of India">
     <meta name="keywords" content="game, gaming, videogame, developer, steam, studio, team">
 
     <!-- OG meta tags that improve the look of your post on social media -->
@@ -55,7 +55,7 @@
 <body>
     <!-- Loading Screen -->
     <div id="loader-wrapper">
-        <h1 class="loader-logo"><span class="colored">S</span>TRIDER</h1>
+        <h1 class="loader-logo">GALACTIC <span class="colored">GEEKS</span></h1>
         <div id="progress"></div>
         <h3 class="loader-text">LOADING</h3>
     </div>
@@ -65,7 +65,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
             <div class="container">
                 <!-- Site Logo -->
-                <a id="logo" class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt="site logo"></a>
+                <a id="logo" class="navbar-brand" href="#"><img class="img-fluid" src="images/logo_GGN.png" alt="site logo"></a>
                 <!-- Dropdown Button -->
                 <button id="hamburger" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
