--- a/Assets/index.html
+++ b/Assets/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.atypicalthemes.com/portfolio/strider_demo/pages/StriderDark/Video/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 14 Aug 2021 11:09:38 GMT -->
 <head>
     <!-- META TAGS -->
     <meta charset="utf-8">
-    <meta name="author" content="AtypicalThemes">
+    <meta name="Geek" content="Kernel-Panic">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
 
     <!-- WEBSITE TITLE & DESCRIPTION -->
@@ -129,7 +128,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <p class="small-margin">We are a dedicated team of developers, designers, artists, programmers, and most importantly gaming enthusiasts. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae ante pharetra, molestie nunc non, interdum ipsum.</p>
+                    <p class="small-margin">We are a dedicated team of developers, designers, artists, programmers, and most importantly gaming enthusiasts. We are the firt AAA capabile team in India. Our main aim is to make games more fun to play.</p>
                     <img id="awards" src="images/awards.png" class="img-fluid" alt="awads">
                 </div>
                 <div class="col-md-6">
@@ -150,7 +149,7 @@
             </div>
             <div class="row ">
                 <div class="col-md-11 small-margin">
-                   <p>Here at Strider games we pride ourselves in delivering rich and polished experiences that our fanbase can enjoy and immerse themselve into. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse facilisis rhoncus nibh.</p>
+                   <p>Here at Galactic Geeks we pride ourselves in delivering rich and polished experiences that our fanbase can enjoy and immerse themselve into.</p>
                 </div>
                 <div class="col-md-12">
                     <ul class="game-tags">
@@ -447,14 +446,14 @@
             </div>
             <div class="row medium-margin">
                 <div class="col-md-11 tiny-margin">
-                    <p>Our passion unites us. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt mi ut mauris varius, vitae lobortis erat ullamcorper. Pellentesque vel dolor non nisi fringilla scelerisque in non ante.</p>
+                    <p>Our passion unites us.</p>
                 </div>
                 <div id="full-row" class="row text-center">
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/team1.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Me.png" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+                                <p>“Industry ICON”</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -463,14 +462,14 @@
                                 </ul>
                             </figcaption>
                         </figure>
-                        <p class="team-name">Vladimir M.</p>
-                        <p class="subtle">Lead Designer</p>
+                        <p class="team-name">S.Sai Hemanth</p>
+                        <p class="subtle">Game designer & Game programmer</p>
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/team2.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Nathan.png" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+                                <p>“Digital marketer”</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -479,8 +478,8 @@
                                 </ul>
                             </figcaption>
                         </figure>
-                        <p class="team-name">Asimov R.</p>
-                        <p class="subtle">Founder</p>
+                        <p class="team-name">Nathan Decena</p>
+                        <p class="subtle">Marketing expert & programmer</p>
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
@@ -797,10 +796,10 @@
                         <h2 class="short-hr-left">OUR DETAILS</h2>
                         <div id="contact-info">
                             <ul>
-                                <li><i class="fa fa-phone"></i><p>Phone: <span class="colored"><a href="tel:+1(803)635585">+1 (803) 635 585</a></span></p></li>
+                                <li><i class="fa fa-phone"></i><p>Phone: <span class="colored"><a href="tel:+91 8897696573">+91 8897696573</a></span></p></li>
                                 <li><i class="fa fa-envelope"></i><p>Email: <span class="colored"><a href="mailto:office@example.com">office@example.com</a></span></p></li>
                                 <li><i class="fa fa-globe"></i><p>Website: <span class="colored"><a href="www.atypicalthemes.html" target="_blank">www.atypicalthemes.com</a></span></p></li>
-                                <li><i class="fa fa-map-marker"></i><p>Address: <span class="colored">1168 12th Street East Oconomowoc, WI 53066</span></p></li>
+                                <li><i class="fa fa-map-marker"></i><p>Address: <span class="colored">%7-2-6, Patamata, Vijayawda</span></p></li>
                             </ul>
                         </div>
                         <!-- Google Map -->
