--- a/Assets/index.html
+++ b/Assets/index.html
@@ -483,9 +483,9 @@
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/team3.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Sathwik.png" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+                                <p>“Idea Generator”</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -494,14 +494,14 @@
                                 </ul>
                             </figcaption>
                         </figure>
-                        <p class="team-name">Natalia I.</p>
-                        <p class="subtle">Lead Artist</p>
+                        <p class="team-name">G. Sathwik</p>
+                        <p class="subtle">Writer & Level designer</p>
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
-                            <img src="images/placeholder.jpg" data-src="images/team4.jpg" class="img-fluid b-lazy" alt="teammember">
+                            <img src="images/placeholder.jpg" data-src="images/Rohith.png" class="img-fluid b-lazy" alt="teammember">
                             <figcaption class="team-caption">
-                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</p>
+                                <p>“The inventor”</p>
                                 <hr class="hr-short">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
@@ -510,8 +510,24 @@
                                 </ul>
                             </figcaption>
                         </figure>
-                        <p class="team-name">Dimitri A.</p>
-                        <p class="subtle">Programmer</p>
+                        <p class="team-name">K. Sai Rohith</p>
+                        <p class="subtle">3D & VFX artist</p>
+                    </div>
+                    <div class="col-md-3 team-card">
+                        <figure>
+                            <img src="images/placeholder.jpg" data-src="images/Sandeep.png" class="img-fluid b-lazy" alt="teammember">
+                            <figcaption class="team-caption">
+                                <p>“Sleeping beauty”</p>
+                                <hr class="hr-short">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
+                                </ul>
+                            </figcaption>
+                        </figure>
+                        <p class="team-name">P. Sandeep</p>
+                        <p class="subtle">3D artist & level designer</p>
                     </div>
                 </div>
             </div>
