--- a/Assets/index.html
+++ b/Assets/index.html
@@ -479,7 +479,7 @@
                             </figcaption>
                         </figure>
                         <p class="team-name">Nathan Decena</p>
-                        <p class="subtle">Marketing expert & programmer</p>
+                        <p class="subtle">Marketing manager & programmer</p>
                     </div>
                     <div class="col-md-3 team-card">
                         <figure>
@@ -528,6 +528,38 @@
                         </figure>
                         <p class="team-name">P. Sandeep</p>
                         <p class="subtle">3D artist & level designer</p>
+                    </div>
+                    <div class="col-md-3 team-card">
+                        <figure>
+                            <img src="images/placeholder.jpg" data-src="images/Ravi.png" class="img-fluid b-lazy" alt="teammember">
+                            <figcaption class="team-caption">
+                                <p>“Crazy coder”</p>
+                                <hr class="hr-short">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
+                                </ul>
+                            </figcaption>
+                        </figure>
+                        <p class="team-name">G. V V S Ravi Teja</p>
+                        <p class="subtle">Programmer and AI expert</p>
+                    </div>
+                    <div class="col-md-3 team-card">
+                        <figure>
+                            <img src="images/placeholder.jpg" data-src="images/team1.png" class="img-fluid b-lazy" alt="teammember">
+                            <figcaption class="team-caption">
+                                <p>“Master”</p>
+                                <hr class="hr-short">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter fa-lg"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
+                                </ul>
+                            </figcaption>
+                        </figure>
+                        <p class="team-name">M. Shashank</p>
+                        <p class="subtle">Animaroe and Rigging Expert</p>
                     </div>
                 </div>
             </div>
