My links are done

--- a/Assets/ProfessionalWorks/Me/index.html
+++ b/Assets/ProfessionalWorks/Me/index.html
@@ -902,7 +902,7 @@ Includes a music player for a proprietary sound format made using the GameCube S
 					<!-- MENU BAR TITLE -->
 					<div class="col-xs-8 col-sm-4 col-md-3 col-lg-3 col-xl-2">
 						<div id="menubar-title" class="noselect">
-							<span>Hugo Peters</span>
+							<span>Sai Hemanth</span>
 						</div>
 					</div>
 					<!-- End of MENU BAR TITLE -->
@@ -926,7 +926,7 @@ Includes a music player for a proprietary sound format made using the GameCube S
 								</div>
 							</div>
 								<a href="Hemanth_Resume_WebVersion.pdf" onclick="trackResume();return true;" style="border: none; text-decoration: none;" target="_blank" class="menubar-item">
-									<span class="noselect menubar-item-text"><i class="fa fa-file-text" aria-hidden="true"></i>   RÉSUMÉ</span>
+									<span class="noselect menubar-item-text"><i class="fa fa-file-text" aria-hidden="true"></i>   RESUME</span>
 								</a>
 							</a>
 							<div class="menubar-item" data-target-element="#contact">
