--- a/Assets/index.html
+++ b/Assets/index.html
@@ -456,9 +456,9 @@
                                 <p>“Industry ICON”</p>
                                 <hr class="hr-short">
                                 <ul>
-                                    <li><a href="#"><i class="fa fa-facebook fa-lg"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin fa-lg"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram fa-lg"></i></a></li>
+                                    <li><a href="https://www.facebook.com/sai.hemanth.98031/" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/sai-hemanth-sattenapalli-3874b010b/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a></li>
+                                    <li><a href="https://www.instagram.com/saihemanth2410/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
                                     <li><a href="ProfessionalWorks/Me/index.html" target="_blank"><i class="fa fa-suitcase fa-lg"></i></a></li>
                                     <li><a href="https://github.com/hemanth2410" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
                                 </ul>
