A tiny update is remaining

--- a/Assets/ProfessionalWorks/Me/index.html
+++ b/Assets/ProfessionalWorks/Me/index.html
@@ -422,7 +422,7 @@ Copyright 2016 by Hugo Peters -->
 
                                             <div class="work-item-title-container">
                                                 <div class="work-item-title">
-                                                    <span>Kong's Adventure'</span>
+                                                    <span>Kong's Adventure</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -478,11 +478,11 @@ Copyright 2016 by Hugo Peters -->
                                 <div class="work-item-container">
                                     <a href="projects/reverse-engineering-b2s.html">
                                         <div class="work-item">
-                                            <div class="work-item-bg" style="background-image: url('assets/projectThumbs/thumbB2s.png')"></div>
+                                            <div class="work-item-bg" style="background-image: url('assets/projectThumbs/Cyberpunk.jpg')"></div>
 
                                             <div class="work-item-title-container">
                                                 <div class="work-item-title">
-                                                    <span>Reverse Engineering Beyond: Two Souls</span>
+                                                    <span>Cyber punk style envronment design</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -491,13 +491,16 @@ Copyright 2016 by Hugo Peters -->
                                         <div class="work-item-tag" style="background-color: #88acd0">
                                             <span>technical</span>
                                         </div>
+                                        <div class="work-item-tag" style="background-color: #a60b0b">
+                                            <span>Level design</span>
+                                        </div>
                                         <div class="work-item-tag" style="background-color: #452bae">
-                                            <span>hax</span>
+                                            <span>Post processing</span>
                                         </div>
                                     </div>
                                     <div class="work-item-desc-container">
                                         <div class="work-item-desc">
-                                            <span>Reversing PlayStation®3 exclusive &quot;Beyond: Two Souls™&quot;: data formats, Lua framework, sequences, choice events, audio streaming, camera animation, models, GUI framework, much more.</span>
+                                            <span>A Cyberpunk 2077 style environment designed in unity. I was inspired by althise neon signs in the game Cyberpnk 2077 so decided to make one using unity.</span>
                                         </div>
                                     </div>
                                     <div class="work-item-desc-container">
@@ -510,23 +513,15 @@ Copyright 2016 by Hugo Peters -->
                                             <!-- User items -->
                                             <tr>
                                                 <td class="work-item-contrib-cell"><i class="fa fa-check" aria-hidden="true"></i></td>
-                                                <td class="work-item-contrib-cell">PS3 game on PC...</td>
+                                                <td class="work-item-contrib-cell">Uses new unity's HDRP for best possible graphics.</td>
                                             </tr>
                                             <tr>
                                                 <td class="work-item-contrib-cell"><i class="fa fa-check" aria-hidden="true"></i></td>
-                                                <td class="work-item-contrib-cell">Built an engine around pre-existing binary data</td>
+                                                <td class="work-item-contrib-cell">Cinematic quality postprocessing.</td>
                                             </tr>
                                             <tr>
                                                 <td class="work-item-contrib-cell"><i class="fa fa-check" aria-hidden="true"></i></td>
-                                                <td class="work-item-contrib-cell">Custom mesh data</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="work-item-contrib-cell"><i class="fa fa-check" aria-hidden="true"></i></td>
-                                                <td class="work-item-contrib-cell">Chunk based audio/anim streaming</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="work-item-contrib-cell"><i class="fa fa-check" aria-hidden="true"></i></td>
-                                                <td class="work-item-contrib-cell">Character dialog, choice events</td>
+                                                <td class="work-item-contrib-cell">Have to implement this using new Ray tracing feature for DX12 hardware.</td>
                                             </tr>
                                         </table>
                                     </div>
