--- a/Assets/ProfessionalWorks/Me/index.html
+++ b/Assets/ProfessionalWorks/Me/index.html
@@ -535,7 +535,7 @@ Copyright 2016 by Hugo Peters -->
 
                                             <div class="work-item-title-container">
                                                 <div class="work-item-title">
-                                                    <span>Dinosaur Planet Leftovers</span>
+                                                    <span>Low poly environment design</span>
                                                 </div>
                                             </div>
                                         </div>
