--- a/Assets/index.html
+++ b/Assets/index.html
@@ -74,6 +74,9 @@
                 <!-- Navigation Links -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="FunActivities/YourIdeaIsBig.html">How big ?</a>
+                        </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#about">About</a>
                         </li>
