--- a/Assets/FunActivities/YourIdeaIsBig.html
+++ b/Assets/FunActivities/YourIdeaIsBig.html
@@ -1,189 +1,196 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- Mirrored from yourgameideaistoobig.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Oct 2021 15:47:59 GMT -->
+<!-- Mirrored from localhost:44384/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Oct 2021 03:09:15 GMT -->
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
-
-<title>Your game idea is too big</title>
-
-<script type="text/javascript">
-function estimate(form) {
-  
-  var budget = 1000;
-  
-  for (var i=0; i < form.elements.length; i++) {
-    if (form.elements[i].checked == true) {
-	    budget = budget * form.elements[i].value;
-    }
-  }
-
-  budget = Math.round(budget);
-	
-	// format estimate
-	var formatted_budget = budget.toString();
-	formatted_budget = formatted_budget.replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,");
-	document.getElementById("estimate").innerHTML = "<p>Estimate: $" + formatted_budget + "*</p>";
-	  
-  var solo_time;
-  var solo_units;
-
-  if (budget >= 50000) {
-     solo_time = Math.round(budget / 50000).toFixed(1);
-     solo_units = "years";
-  }
-  else if (budget >= 4000) {
-     solo_time = Math.round(budget / 4200).toFixed(1);
-     solo_units = "months";
-  }
-  else {
-    solo_time = Math.round(budget / 1000).toFixed(1);
-    solo_units = "weeks";
-  }
-
-	var descr = "<p>You could hire a team to make it for that price.<br />Or you could make it yourself in about " + solo_time + " " + solo_units + "</p>";
-	document.getElementById("description").innerHTML = descr;
-	
-}
-</script>
-
-<style>
- body {text-align: center; margin-top: 50px; font-family: helvetica, arial, sans-serif;}
- h1 {font-size: 32pt; text-align: center; text-shadow: 0px 1px 0px rgba(255,255,255,.5);}
- #content {width: 600px; text-align: left; margin: 0 auto; border-radius: 10px; background-color: #dddddd; padding: 20px;}
- #intro {margin-left: 100px; font-style: italic;}
- form {margin-left: 100px;}
- #estimate {text-align: center; font-size: 32pt; color: #ff0000; text-shadow: 0px 1px 0px rgba(255,255,255,.5);}
- #description {text-align: center; color: #666666;}
- #footer {color: #999999; font-size: 8pt;}
- #footer a {color: #6666ff;}
- #left_ads {float: left;}
- #right_ads {float: right;}
- #advice {font-size: 9pt; text-align: center;}
-</style> 
-
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home page - BigApp</title>
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/site.css" />
 </head>
 <body>
+    <div>
+        <main role="main">
+            
 
-<div id="left_ads">
-</div>
 
-<div id="right_ads">
-</div>
+<img src="Resources/rootLogo.png" style="display:block; margin-top:50px; margin-left:auto; margin-right:auto; height:auto; max-width:200%;" />
 
-<div id="content">
-
-<h1>Your game idea is too big</h1>
-
-<p id="intro">
-Tell me everything about your video game idea!
+<p style="margin:30px 10% 0px 5%; text-align:left;font-size:28px; color:#838081;">
+    All we need to know,
 </p>
-
-<form action="#">
-
-  <input type="checkbox" name="feature" id="start" value="1.0" checked="checked" disabled="disabled"/>
-  <label for="start">Ok, so it's this game with ...</label>
-  <br /> 
-  
-  <input type="checkbox" name="feature" id="threedee" value="4.2" onclick="estimate(this.form);" />
-  <label for="threedee">State of the art Visuals!</label>
-  <br />
-  
-  <input type="checkbox" name="feature" id="openworld" value="7.6" onclick="estimate(this.form);" />
-  <label for="openworld">Vast, Open World to explore!</label>
-  <br />
-
-  <input type="checkbox" name="feature" id="mmo" value="12.0" onclick="estimate(this.form);" />
-  <label for="mmo">Massively Multiplayer Online (MMO)!</label>
-  <br />
-  
-  <input type="checkbox" name="feature" id="fps" value="3.5" onclick="estimate(this.form);" />
-  <label for="fps">First Person Shooter (FPS) mechanics!</label>
-  <br />
-  
-  <input type="checkbox" name="feature" id="rts" value="3.2" onclick="estimate(this.form);" />
-  <label for="rts">Real-Time Strategy (RTS) mechanics!</label>
-  <br />
-
-  <input type="checkbox" name="feature" id="fighting" value="2.8" onclick="estimate(this.form);" />
-  <label for="fighting">Melee Combat or Fighting Game mechanics!</label>
-  <br />
-  
-  <input type="checkbox" name="feature" id="driving" value="2.4" onclick="estimate(this.form);" />
-  <label for="driving">Vehicles and Driving!</label>
-  <br />
-
-  <input type="checkbox" name="feature" id="rpg" value="1.8" onclick="estimate(this.form);" />
-  <label for="rpg">RPG Elements! Lots of stats and upgrades!</label>
-  <br />
-
-  <input type="checkbox" name="feature" id="puzzle" value="1.2" onclick="estimate(this.form);" />
-  <label for="puzzle">Puzzle or Platforming Elements!</label>
-  <br />
-
-  <input type="checkbox" name="feature" id="creation" value="2.0" onclick="estimate(this.form);" />
-  <label for="creation">Fully customizable Character Creation!</label>
-  <br />
-  
-  <input type="checkbox" name="feature" id="classes" value="3.0" onclick="estimate(this.form);" />
-  <label for="classes">Many distinct Classes or Characters to choose!</label>
-  <br />  
-
-  <input type="checkbox" name="feature" id="crafting" value="1.2" onclick="estimate(this.form);" />
-  <label for="crafting">Deep Crafting System!</label>
-  <br />  
-
-  <input type="checkbox" name="feature" id="pve_pvp" value="2.4" onclick="estimate(this.form);" />
-  <label for="pve_pvp">Both PVE and PVP Gameplay!</label>
-  <br />    
-
-  <input type="checkbox" name="feature" id="story" value="4.5" onclick="estimate(this.form);" />
-  <label for="story">Hours and hours of Campaign Story Mode!</label>
-  <br /> 
-
-  <input type="checkbox" name="feature" id="procedural" value="2.6" onclick="estimate(this.form);" />
-  <label for="procedural">Procedural generation for endless replayability!</label>
-  <br />    
-
-  <input type="checkbox" name="feature" id="dialog" value="1.5" onclick="estimate(this.form);" />
-  <label for="dialog">Branching Dialog Trees with a novel of text!</label>
-  <br />    
-
-  <input type="checkbox" name="feature" id="vox" value="1.2" onclick="estimate(this.form);" />
-  <label for="vox">Quality Voice Acting for every line!</label>
-  <br />    
-
-  <input type="checkbox" name="feature" id="mods" value="1.5" onclick="estimate(this.form);" />
-  <label for="mods">Modding Tools for the community!</label>
-  <br />    
-
-  <input type="checkbox" name="feature" id="platforms" value="1.5" onclick="estimate(this.form);" />
-  <label for="platforms">Available on all Major Platforms!</label>
-  <br />    
-
-  <!-- The second 90% -->
-  <input type="checkbox" name="feature" id="polish" value="9.0" onclick="estimate(this.form);" />
-  <label for="polish">Expertly designed and polished GOTY contender!</label>
-  <br />
-  
+<p style="margin:0px 10% 0px 5%; text-align:left; font-size:28px; color:#838081;">
+    about your video game idea.
+</p>
+<p style="margin:30px 10% 0px 5%; text-align:left; font-size:20px; font-weight:700; color:#838081;">
+    choose the features of your immersive game.
+</p>
+<form>
+<div class="Wrapprt-grid">
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="game" checked="checked" value="1.0" disabled="disabled">
+        <label for="game">
+            <span>Ok, it's this game with ...</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="art" value="4.2" onclick="estimate(this.form)">
+        <label for="art">
+            <span>State of the art visuals!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="world" value="7.6" onclick="estimate(this.form)">
+        <label for="world">
+            <span>Vast, Open world to explore!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="mmo" value="12.0" onclick="estimate(this.form)">
+        <label for="mmo">
+            <span>Massively Multiplayer Online (MMO)!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="fps" value="3.5" onclick="estimate(this.form)">
+        <label for="fps">
+            <span>First Person Shooter (FPS) mechanics!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="rts" value="3.2" onclick="estimate(this.form)">
+        <label for="rts">
+            <span>Real-Time Strategy (RTS) mechanics!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="fighting" value="2.8" onclick="estimate(this.form)">
+        <label for="fighting">
+            <span>Melee Combat or Fighting mechanic!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="driving" value="2.4" onclick="estimate(this.form)">
+        <label for="driving">
+            <span>Vehicles and Driving!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="rpg" value="1.8" onclick="estimate(this.form)">
+        <label for="rpg">
+            <span>RPG Elements! Lots of Upgrades!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="puzzle" value="1.2" onclick="estimate(this.form)">
+        <label for="puzzle">
+            <span>Puzzle or Platforming Elements!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="creation" value="2.0" onclick="estimate(this.form)">
+        <label for="creation">
+            <span>Fully Customizable Character Creation!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="classes" value="3.0" onclick="estimate(this.form)">
+        <label for="classes">
+            <span>Many distint Characters or Classes!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="crafting" value="1.2" onclick="estimate(this.form)">
+        <label for="crafting">
+            <span>Deep Crafting System!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="pve_pvp" value="2.4" onclick="estimate(this.form)">
+        <label for="pve_pvp">
+            <span>Both PVE and PVP gameplay!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="story" value="4.5" onclick="estimate(this.form)">
+        <label for="story">
+            <span>Hours of Campaign mode!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="procedural" value="2.6" onclick="estimate(this.form)">
+        <label for="procedural">
+            <span>Procedural generation of level!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="dialog" value="1.5" onclick="estimate(this.form)">
+        <label for="dialog">
+            <span>Branching Dialogs!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="vox" value="1.2" onclick="estimate(this.form)">
+        <label for="vox">
+            <span>Quality Voice Acting!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="mods" value="1.5" onclick="estimate(this.form)">
+        <label for="mods">
+            <span>Modding Tools for Community!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="platforms" value="1.5" onclick="estimate(this.form)">
+        <label for="platforms">
+            <span>Available on all Major Platforms!</span>
+        </label>
+    </div>
+    <div style="text-align:center; margin:20px 20px 20px 20px;">
+        <input type="checkbox" name="feature" id="polish" value="9.0" onclick="estimate(this.form)">
+        <label for="polish">
+            <span>GOTY standard!</span>
+        </label>
+    </div>
+</div>
 </form>
 
-<div id="estimate">
-  <p>Estimate: $1,000</p>
-</div>
-<div id="description">
-  <p>You could hire a team to make it for that price.<br />Or you could make it yourself in about 1 week.</p>
-</div>
 
-<p id="advice">
-  <a href="advice.html">But...!</a>
-</p>
-
+<div id="estimate" class="BorderFinal">
+    <p style="text-align:center; color:#838081; font-size:24px; font-weight:700;">Estimate : $1,000</p>
+</div>
+<div>
+    <p style="text-align:center; font-size:24px; color:#838081;">You could hire a team to make it for that price.</p>
+</div>
+<div id="description" class="BorderFinal">
+    <p style="text-align:center; color:#838081; font-size:24px; font-weight:700;">Or you could make it yourself in about 1 week.</p>
 </div>
 
-<div id="footer">
-  <p>* Take me back to <a href="https://hemanth2410.github.io">Scarlett Moose Entertainments</a></p>
-</div>
+<div style="width:100%; height:400px; background-color:#000000; padding:50px 50px 0px 50px; margin:50px 0px 0px 0px;">
+    <img src="Resources/SMlogo.png" style="display:block; margin-top:50px; margin-left:auto; margin-right:auto; height:auto; max-width:200%;" />
+    <div style="display:flex; flex-direction:row; justify-content:space-between; margin: 30px 50px 30px 50px;">
+        <p style="font-size:10px; color:#838081;">Home</p>
+        <p style="font-size:10px; color:#838081;">About</p>
+        <p style="font-size:10px; color:#838081;">Services</p>
+        <p style="font-size:10px; color:#838081;">Community</p>
+        <p style="font-size:10px; color:#838081;">Portfolio</p>
+        <p style="font-size:10px; color:#838081;">Contact Us</p>
+        <p style="font-size:10px; color:#838081;">Language</p>
 
+    </div>
+    <p style="font-size:12px; text-align:center">Copyright © 2021 Scarlettmoose Entertainment PVT LTD All rights reserved.</p>
+</div>
+        </main>
+    </div>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/sitece52.js?v=QMXFeroDXqzchN26tWERInceyONL82xFLSEJx6CZIhE"></script>
+
+    
 </body>
 
-<!-- Mirrored from yourgameideaistoobig.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Oct 2021 15:47:59 GMT -->
+<!-- Mirrored from localhost:44384/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Oct 2021 03:09:18 GMT -->
 </html>
