--- a/Assets/index.html
+++ b/Assets/index.html
@@ -75,6 +75,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
+                            <a class="nav-link" href="GameJam/byog.html">Game Jam</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="FunActivities/YourIdeaIsBig.html">How big ?</a>
                         </li>
                         <li class="nav-item active">
