--- a/Assets/GameJam/byog.html
+++ b/Assets/GameJam/byog.html
@@ -1,35 +1,13 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<!-- Mirrored from itch.io/jam/byog by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 26 Oct 2021 09:32:10 GMT -->
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="byog/images/gamepad.ico" type="image/x-icon">
-    <!--<meta name="msvalidate.01" content="3BB4D18369B9C21326AF7A99FCCC5A09" />
-    <meta property="fb:app_id" content="537395183072744" />
-    <title>BYOG 2021 - itch.io</title>
-    <meta name="csrf_token" value="IldkTGVlUVUzeFkwMUNxaSBVUiBCVVRUIDdram5wWVBlZk1PS0puTiI=.FbcFPquo56vNSCg8itGYVyE6stM=" />
-    <meta content="BYOG 2021" property="og:title" />
-    <meta content="itch.io" property="og:site_name" />
-    <meta content="4503599627724030" property="twitter:account_id" />-->
-    <link rel="manifest" href="https://itch.io/static/manifest.json" />
-    <script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"BreadcrumbList","itemListElement":[{"item":{"@id":"https:\/\/itch.io\/jams","name":"Jams"},"@type":"ListItem","position":1}]}</script>
-    <!--<meta content="summary_large_image" name="twitter:card" />
-    <meta content="https://img.itch.zone/aW1nLzcyMzUyMTMuanBn/508x254%23mb/H1QSOn.jpg" property="twitter:image" />
-    <meta content="@itchio" name="twitter:site" />
-    <meta content="BYOG 2021" name="twitter:title" />
-    <meta content="A game jam from 2021-10-27 to 2021-11-17 hosted by Yadu Rajiv, Chirag Chopra &amp; Ninjha. India&#039;s oldest game jam returns this year with the India Game Developer Conference 2021 ! The 16th edition of BYOG (2010-2021) will be a 48-hours jam..." name="twitter:description" />
-    <meta content="A game jam from 2021-10-27 to 2021-11-17 hosted by Yadu Rajiv, Chirag Chopra &amp; Ninjha. India&#039;s oldest game jam returns this year with the India Game Developer Conference 2021 ! The 16th edition of BYOG (2010-2021) will be a 48-hours jam..." property="og:description" />
-    <meta content="A game jam from 2021-10-27 to 2021-11-17 hosted by Yadu Rajiv, Chirag Chopra &amp; Ninjha. India&#039;s oldest game jam returns this year with the India Game Developer Conference 2021 ! The 16th edition of BYOG (2010-2021) will be a 48-hours jam..." name="description" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />-->
     <meta content="#FA5C5C" name="theme-color" />
-    <meta content="https://img.itch.zone/aW1nLzcyMzUyMTMuanBn/original/BmtYDo.jpg" property="og:image" />
     <link rel="stylesheet" href="byog/stylejss/jam8e41.css?0" />
-    <script type="text/javascript">window.itchio_translations_url = 'https://static.itch.io/translations';</script>
     <script type="text/javascript" src="byog/stylejss/lib8e41.js?0"></script>
     <script type="text/javascript" src="byog/stylejss/bundle.min8e41.js?0"></script>
-    <script data-src="https://static.itch.io/react.min.js?1635047061" id="lib_react_src"></script>
     <script type="text/javascript" src="byog/stylejss/jam.min8e41.js?0"></script>
-    <script type="text/javascript">I.current_user = null;</script>
     <script type="text/javascript">
         if (!window.location.hostname.match(/localhost/)) {
             (function (i, s, o, g, r, a, m) {
@@ -74,6 +52,9 @@
             }
         }, 1000);
     </script>
+
+    <meta name="description" content="Unreal Game Jam 2021 hosted by IACG">
+
     <style type="text/css" id="jam_theme">
         :root {
             --itchio_ui_bg: #2c2c2c;
@@ -248,6 +229,7 @@
             background: none;
         }
     </style>
+
 </head>
 <body data-page_name="view_jam" data-host="itch.io" class="locale_en responsive no_theme_toggle">
     <div class="jam_page_wrap">
